# sport-data-parser

./: README.md  helpers.py  pull_data_via_csv.py  pull_data_via_database.py  pyproject.toml
method_one/: pull_data_via_csv.py  pull_data_via_database.py
method_two/: pull_data_via_csv.py  pull_data_via_database.py
